Comienzo de diseño de menu_inicio

--- a/src/php/vista/v_menu_inicio.html
+++ b/src/php/vista/v_menu_inicio.html
@@ -3,9 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Chaos Dungeoon</title>
+        <link rel="stylesheet" href="../../css/style.css">
     </head>
     <body>
-                                
+        <main id="menu_inicio">
+            <div id="inicio_aventura">
+                <img src="../../img/logo_sin_fondo.png">
+                <div>
+                    <h2>¡¡ Bienvenido a la mazmorra del caos !!</h2>
+                </div>
+                <a><img src="../../img/letrero.png"><h3>Iniciar aventura</h3></a>
+            </div>
+            <div>
+                hola<br><br><br><br><br><br><br><br><br>
+            </div>
+            <div>
+
+            </div>
+        </main>
+        <main id="inicio_sesion">
+
+        </main>
     </body>
 </html>
