--- a/src/php/vista/v_menu_inicio.html
+++ b/src/php/vista/v_menu_inicio.html
@@ -15,15 +15,83 @@
                 </div>
                 <a><img src="../../img/letrero.png"><h3>Iniciar aventura</h3></a>
             </div>
-            <div>
-                hola<br><br><br><br><br><br><br><br><br>
+            <div id="info_aventura">
+                <div class="letrero">
+                    <img src="../../img/letrero.png">
+                    <h3>Información del juego</h3>
+                </div>
+                <div id="contenedor_info_inicio">
+                    <div class="info_inicio">
+                        <div>
+                            <img src="../../img/subtitulo.jpg">
+                            <h4>La mazmorra del caos</h4>
+                        </div>
+                        <article>
+                             <img src="../../img/logo_sin_fondo.png">
+                             <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
+                        </article> 
+                     </div>
+                     <div class="info_inicio">
+                        <div>
+                            <img src="../../img/subtitulo.jpg">
+                            <h4>La mazmorra del caos</h4>
+                        </div>
+                        <article>
+                             <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
+                             <img src="../../img/logo_sin_fondo.png">
+                        </article> 
+                     </div>
+                     <div class="info_inicio">
+                        <div>
+                            <img src="../../img/subtitulo.jpg">
+                            <h4>La mazmorra del caos</h4>
+                        </div>
+                        <article>
+                             <img src="../../img/logo_sin_fondo.png">
+                             <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
+                        </article> 
+                     </div>
+                     <div class="info_inicio">
+                        <div>
+                            <img src="../../img/subtitulo.jpg">
+                            <h4>La mazmorra del caos</h4>
+                        </div>
+                        <article>
+                             <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
+                             <img src="../../img/logo_sin_fondo.png">
+                        </article> 
+                     </div>
+                     <div class="info_inicio">
+                        <div>
+                            <img src="../../img/subtitulo.jpg">
+                            <h4>La mazmorra del caos</h4>
+                        </div>
+                        <article>
+                             <img src="../../img/logo_sin_fondo.png">
+                             <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
+                        </article> 
+                     </div>
+                     <div class="info_inicio">
+                        <div>
+                            <img src="../../img/subtitulo.jpg">
+                            <h4>La mazmorra del caos</h4>
+                        </div>
+                        <article>
+                             <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
+                             <img src="../../img/logo_sin_fondo.png">
+                        </article> 
+                     </div>
+                </div>
             </div>
-            <div>
-
-            </div>
+            <footer>
+                <img src="../../img/logo_sin_fondo.png">
+                <p>©2023-2024 CHAOS DUNGEOON</p>
+                <p>Términso y condiciones | Política de privacidad de datos | Creación en Git</p>
+                <p>Diseñado y realizado por Rubén Sancho y Antonio Manuel Figueroa</p>
+            </footer>
         </main>
         <main id="inicio_sesion">
-
+            
         </main>
     </body>
 </html>
