vista_sesion terminada

--- a/src/php/vista/v_menu_inicio.html
+++ b/src/php/vista/v_menu_inicio.html
@@ -30,57 +30,57 @@
                              <img src="../../img/logo_sin_fondo.png">
                              <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
                         </article> 
-                     </div>
-                     <div class="info_inicio">
-                        <div>
-                            <img src="../../img/subtitulo.jpg">
-                            <h4>La mazmorra del caos</h4>
-                        </div>
-                        <article>
-                             <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
-                             <img src="../../img/logo_sin_fondo.png">
-                        </article> 
-                     </div>
-                     <div class="info_inicio">
-                        <div>
-                            <img src="../../img/subtitulo.jpg">
-                            <h4>La mazmorra del caos</h4>
-                        </div>
-                        <article>
-                             <img src="../../img/logo_sin_fondo.png">
-                             <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
-                        </article> 
-                     </div>
-                     <div class="info_inicio">
-                        <div>
-                            <img src="../../img/subtitulo.jpg">
-                            <h4>La mazmorra del caos</h4>
-                        </div>
-                        <article>
-                             <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
-                             <img src="../../img/logo_sin_fondo.png">
-                        </article> 
-                     </div>
-                     <div class="info_inicio">
-                        <div>
-                            <img src="../../img/subtitulo.jpg">
-                            <h4>La mazmorra del caos</h4>
-                        </div>
-                        <article>
-                             <img src="../../img/logo_sin_fondo.png">
-                             <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
-                        </article> 
-                     </div>
-                     <div class="info_inicio">
-                        <div>
-                            <img src="../../img/subtitulo.jpg">
-                            <h4>La mazmorra del caos</h4>
-                        </div>
-                        <article>
-                             <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
-                             <img src="../../img/logo_sin_fondo.png">
-                        </article> 
-                     </div>
+                    </div>
+                    <div class="info_inicio">
+                    <div>
+                        <img src="../../img/subtitulo.jpg">
+                        <h4>La mazmorra del caos</h4>
+                    </div>
+                    <article>
+                            <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
+                            <img src="../../img/logo_sin_fondo.png">
+                    </article> 
+                    </div>
+                    <div class="info_inicio">
+                    <div>
+                        <img src="../../img/subtitulo.jpg">
+                        <h4>La mazmorra del caos</h4>
+                    </div>
+                    <article>
+                            <img src="../../img/logo_sin_fondo.png">
+                            <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
+                    </article> 
+                    </div>
+                    <div class="info_inicio">
+                    <div>
+                        <img src="../../img/subtitulo.jpg">
+                        <h4>La mazmorra del caos</h4>
+                    </div>
+                    <article>
+                            <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
+                            <img src="../../img/logo_sin_fondo.png">
+                    </article> 
+                    </div>
+                    <div class="info_inicio">
+                    <div>
+                        <img src="../../img/subtitulo.jpg">
+                        <h4>La mazmorra del caos</h4>
+                    </div>
+                    <article>
+                            <img src="../../img/logo_sin_fondo.png">
+                            <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
+                    </article> 
+                    </div>
+                    <div class="info_inicio">
+                    <div>
+                        <img src="../../img/subtitulo.jpg">
+                        <h4>La mazmorra del caos</h4>
+                    </div>
+                    <article>
+                            <p>Los jugadores exploran mazmorras, interactúan con personajes no jugadores, resuelven enigmas y enfrentan criaturas fantásticas, todo mientras desarrollan las historias de sus personajes. A medida que avanzan en el juego, los personajes pueden ganar experiencia, subir de nivel y adquirir habilidades y tesoros.</p>
+                            <img src="../../img/logo_sin_fondo.png">
+                    </article> 
+                    </div>
                 </div>
             </div>
             <footer>
@@ -91,7 +91,43 @@
             </footer>
         </main>
         <main id="inicio_sesion">
-            
+            <nav><button>Pito</button></nav>
+            <div id="contenedor_inicio_sesion">
+                <img src="../../img/logo_sin_fondo.png">
+                <section>
+                    <form>
+                        <div>
+                            <h5>Correo electrónico</h5>
+                            <input type="text">
+                            <h5>Contraseña</h5>
+                            <input type="text">
+                        </div>
+                        <br>
+                        <button>
+                            <img src="../../img/letrero.png">
+                            <h3>Iniciar sesión</h3>
+                        </button>
+                    </form>
+                    <form>
+                        <div>
+                            <h5>Nombre</h5>
+                            <input type="text">
+                            <h5>Correo electrónico</h5>
+                            <input type="text">
+                            <h5>Contraseña</h5>
+                            <input type="text">
+                        </div>
+                        <p>
+                            <input type="checkbox">
+                            Acepto los términos y condiciones
+                        </p>
+                        <button>
+                            <img src="../../img/letrero.png">
+                            <h3>Registrarme</h3>
+                        </button>
+                    </form>
+                </section>
+            </div>
         </main>
     </body>
 </html>
